keepup with trunk commit
added wizard option and project builder for using JRebel with the J2EE preview server


increase heap and permgen for J2EE Preview server in WTP


made version number of dependecies less strict and more clear


Fix regression: the 'cannot have access control rules without a principal declaration' error was incorrectly reported on each rule in the editor. This was caused by moving a dynamic rule creation out of the generator library of the compiler, the DR-analysis tool of the editor would no longer find it and the DR was excluded from editor cache.


Fix regression: function resolving in editor was broken, dynamic rules for lookup were failing due to newly added annotation on function name.

svn path=/webdsl-editor/branch/WebServices/; revision=5237